--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        token: ${{ secrets.CODECOV_TOKEN }} # supposedly not required for public repos
         fail_ci_if_error: true
