--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -2,7 +2,7 @@
 name: ruff
 on:
   push:
-    branches: [main]
+  #  branches: [main]
   pull_request:
     branches: [main]
 jobs:
@@ -11,7 +11,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pip install --user ruff
-    - run: ruff --format=github --select=E9,F63,F7 --target-version=py37 .
-    - run: ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
-    - run: ruff --format=github --line-length=200 --target-version=py37 .
-    - run: ruff --format=github --target-version=py37 .
+    - run: ruff --format=github --ignore=E402,F401 --line-length=150 --target-version=py37 .
+    - run: ruff --format=github --ignore=E402,F401 --target-version=py37 .
