--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -2,7 +2,7 @@
 name: ruff
 on:
   push:
-  #  branches: [main]
+    branches: [main]
   pull_request:
     branches: [main]
 jobs:
@@ -11,5 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pip install --user ruff
-    - run: ruff --format=github --ignore=E402,F401 --line-length=150 --target-version=py37 .
     - run: ruff --format=github --ignore=E402,F401 --target-version=py37 .
