--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pip install --user ruff
-    - run: ruff --format=github --ignore=E402,F401 --target-version=py37 .
+    - run: ruff --format=github --ignore=E402,F401 --select=E,F,PL,W --target-version=py37 .
