--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel"]
+requires = ["setuptools>=66.0.0", "wheel"] # >=64 for PEP660 support
 build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
@@ -46,6 +46,9 @@ changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"
 
 [project.optional-dependencies]
 test = [
+    "setuptools>=66.0",
+    "build>=0.1",
+    "wheel>=0.40",
     "black >= 23.1",
     "pylint >= 2.17",
     "pytest >= 7.2",
