--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,15 +46,17 @@ changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"
 
 [project.optional-dependencies]
 test = [
-    "setuptools>=66.0",
-    "build>=0.1",
-    "wheel>=0.40",
+    "bandit >= 1.7",
     "black >= 23.1",
+    "build >= 0.1",
+    "pip >= 23.0",
     "pylint >= 2.17",
     "pytest >= 7.2",
     "pytest-cov >= 4.0",
-    "Sphinx >= 6.1.3",
-    "sphinx-rtd-theme >= 1.2.0",
+    "setuptools >= 66.0",
+    "Sphinx >= 5.3",
+    "sphinx-rtd-theme >= 1.2",
+    "wheel >= 0.40"
 ]
 
 [tool.bandit]
