--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,40 +2,39 @@ name: sandpit
 
 on:
   push:
-    branches:    
+    branches:
       - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install build dependencies
-      run: |
-        if [ -f requirements_build.txt ]; then pip install -r requirements_build.txt; fi 
-    - name: Install code dependencies
-      run: | 
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with pylint
-      run: |
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install build dependencies
+        run: |
+          if [ -f requirements_build.txt ]; then pip install -r requirements_build.txt; fi
+      - name: Install code dependencies
+        run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with pylint
+        run: |
           pylint -E src/sandpit
-    - name: Scan security vulnerabilities with bandit
-      run: |
-        bandit -c pyproject.toml -r .
-    - name: Generate coverage report
-      run: |
-        pytest --cov=sandpit --cov-report=xml
-    - name: "Upload coverage to Codecov"
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }} # supposedly not required for public repos
-        fail_ci_if_error: true
+      - name: Scan security vulnerabilities with bandit
+        run: |
+          bandit -c pyproject.toml -r -lll .
+      - name: Generate coverage report
+        run: |
+          pytest --cov=sandpit --cov-report=xml
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # supposedly not required for public repos
+          fail_ci_if_error: true
