--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,8 +13,7 @@
                 "pip",
                 "install",
                 "--upgrade",
-                "-r",
-                "${workspaceFolder}/requirements_build.txt",
+                "."
             ],
             "problemMatcher": []
         },
@@ -27,12 +26,8 @@
                 "pip",
                 "install",
                 "--upgrade",
-                "-r",
-                "${workspaceFolder}/requirements.txt",
+                ".[test]"
             ],
-            "options": {
-                "cwd": "src"
-            },
             "problemMatcher": []
         },
         {
