--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install build dependencies
         run: |
+          pip install .[build]
+      - name: Install test dependencies
+        run: |
           pip install .[test]
       - name: Install code dependencies
         run: |
