--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,11 +1,11 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    // Use the Update Toolchain task to install the necessary build packages.
+    // Use the Install Build / Test Dependencies tasks to install the necessary packages.
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Update Toolchain",
+            "label": "Install Dependencies",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -18,7 +18,20 @@
             "problemMatcher": []
         },
         {
-            "label": "Update Dependencies",
+            "label": "Install Build Dependencies",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pip",
+                "install",
+                "--upgrade",
+                ".[build]"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Install Test Dependencies",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -182,8 +195,9 @@
             "dependsOrder": "sequence",
             "dependsOn": [
                 "Clean",
-                "Update Toolchain",
-                "Update Dependencies",
+                "Install Build Dependencies",
+                "Install Test Dependencies",
+                "Install Dependencies",
                 "Format",
                 "Security",
                 "Pylint",
