--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,18 +45,20 @@ repository = "https://github.com/semuadmin/sandpit"
 changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"
 
 [project.optional-dependencies]
+build = [
+    "build >= 0.1",
+    "setuptools >= 66.0",
+    "wheel >= 0.40"
+]
 test = [
     "bandit >= 1.7",
     "black >= 23.1",
-    "build >= 0.1",
     "pip >= 23.0",
     "pylint >= 2.17",
     "pytest >= 7.2",
     "pytest-cov >= 4.0",
-    "setuptools >= 66.0",
     "Sphinx >= 5.3",
     "sphinx-rtd-theme >= 1.2",
-    "wheel >= 0.40"
 ]
 
 [tool.bandit]
