--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
             "problemMatcher": []
         },
         {
-            "label": "Install Build Dependencies",
+            "label": "Install Deploy Dependencies",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -26,7 +26,7 @@
                 "pip",
                 "install",
                 "--upgrade",
-                ".[build]"
+                ".[deploy]"
             ],
             "problemMatcher": []
         },
@@ -195,7 +195,7 @@
             "dependsOrder": "sequence",
             "dependsOn": [
                 "Clean",
-                "Install Build Dependencies",
+                "Install Deploy Dependencies",
                 "Install Test Dependencies",
                 "Install Dependencies",
                 "Format",
