--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ test = [
     'bandit >= 1.7',
     'black >= 23.0',
     'codespell >= 2.2',
-    'flake >= 6.0',
+    'flake8 >= 6.0',
     'isort >= 5.12',
     'mock >= 5.0',
     'mypy >= 1.2',
