--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,10 +110,10 @@ disable = """
     use-symbolic-message-instead,
 """
 
-[tool.pytest.ini_options]
-minversion = "7.0"
-addopts = "--cov --cov-report term-missing --cov-fail-under 95"
-pythonpath = ["src"]
+# [tool.pytest.ini_options]
+# minversion = "7.0"
+# addopts = "--cov --cov-report term-missing --cov-fail-under 95"
+# pythonpath = ["src"]
 
-[tool.coverage.run]
-source = ["src"]
+# [tool.coverage.run]
+# source = ["src"]
