--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Shopt
         run: shopt -s globstar && pyupgrade --py37-plus **/*.py || true
       - name: Security check with safety
-        run: safety check
+        run: safety check  --continue-on-error
 # jobs:
 #   build:
 #     runs-on: ubuntu-latest
