--- a/.github/workflows/checkpr.yml
+++ b/.github/workflows/checkpr.yml
@@ -1,9 +1,7 @@
-name: sandpit
+name: checkpr
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 
 jobs:
   build:
@@ -18,20 +16,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install deploy dependencies
-        run: pip install .[deploy]
-      - name: Install test dependencies
-        run: pip install .[test]
       - name: Install code dependencies
         run: pip install .
       - name: Lint with pylint
         run: pylint -E src/sandpit
       - name: Scan security vulnerabilities with bandit
-        run: bandit -c pyproject.toml -r -lll .
+        run: bandit -c pyproject.toml -r .
       - name: Generate coverage report
         run: pytest --cov=sandpit --cov-report=xml
-      - name: "Upload coverage to Codecov"
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # supposedly not required for public repos
-          fail_ci_if_error: true
