--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,44 +45,20 @@ repository = "https://github.com/semuadmin/sandpit"
 changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"
 
 [project.optional-dependencies]
-# deploy = [
-#     "build >= 0.1",
-#     "pip >= 23.0",
-#     "setuptools >= 66.0",
-#     "wheel >= 0.40"
-# ]
-# test = [
-#     "bandit >= 1.7",
-#     "black >= 23.1",
-#     "pylint >= 2.17",
-#     "pytest >= 7.2",
-#     "pytest-cov >= 4.0",
-#     "Sphinx >= 5.3",
-#     "sphinx-rtd-theme >= 1.2",
-# ]
-proxy = [
-    "PySocks>=1.7",
-]
 deploy = [
-    "build >= 0.10",
+    "build >= 0.1",
     "pip >= 23.0",
     "setuptools >= 66.0",
-    "wheel >= 0.40",
+    "wheel >= 0.40"
 ]
 test = [
-    'bandit',
-    'black',
-    'codespell',
-    'flake8',
-    'isort',
-    'mock',
-    'mypy',
-    'ptr',
-    'pylama',
-    'pytest',
-    'safety',
-    'six',
-    'tox',
+    "bandit >= 1.7",
+    "black >= 23.1",
+    "pylint >= 2.17",
+    "pytest >= 7.2",
+    "pytest-cov >= 4.0",
+    "Sphinx >= 5.3",
+    "sphinx-rtd-theme >= 1.2",
 ]
 
 [tool.bandit]
