--- a/.github/workflows/checkpr.yml
+++ b/.github/workflows/checkpr.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install deploy dependencies
+        run: pip install .[deploy]
+      - name: Install test dependencies
+        run: pip install .[test]
       - name: Install code dependencies
         run: pip install .
       - name: Lint with pylint
