--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,8 @@
 {
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.formatting.provider": "black",
-    "python.defaultInterpreterPath": "python3",
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
     "editor.formatOnSave": true,
     "modulename": "${workspaceFolderBasename}",
     "distname": "${workspaceFolderBasename}",
-    "moduleversion": "0.0.4",
-    "sarif-viewer.connectToGithubCodeScanning": "off"
+    "moduleversion": "1.0.0",
 }
