--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,15 @@ documentation = "https://github.com/semuadmin/sandpit"
 repository = "https://github.com/semuadmin/sandpit"
 changelog = "https://github.com/semuadmin/sandpit/blob/master/RELEASE_NOTES.md"
 
-[project.optional-dependencies]
-deploy = ["build", "pip", "setuptools >= 75.0", "wheel"]
+[dependency-groups]
+build = [
+    "build",
+    "packaging>=24.2",
+    "pip",
+    "setuptools >= 75.0",
+    "twine>=6.1.0",
+    "wheel",
+]
 test = [
     "bandit",
     "black",
@@ -50,6 +57,7 @@ test = [
     "Sphinx",
     "sphinx-rtd-theme",
 ]
+deploy = [{ include-group = "build" }, { include-group = "test" }]
 
 [tool.setuptools.dynamic]
 version = { attr = "sandpit._version.__version__" }
