--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,9 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
+    // for the documentation about the tasks.json format.
     // Use the Deploy Dependencies tasks to install the necessary packages.
+    // Needs Powershell>=5.1 on Windows.
+    // Remember to include any global Python bin (Scripts on Windows) in PATH.
     "version": "2.0.0",
     "tasks": [
         {
@@ -13,7 +15,7 @@
                 "pip",
                 "install",
                 "--group",
-                "deploy",
+                "deploy"
             ],
             "problemMatcher": []
         },
@@ -27,24 +29,17 @@
                 "dist",
                 "htmlcov",
                 "docs/_build",
-                "${config:modulename}.egg-info",
+                "src/${config:modulename}.egg-info"
             ],
             "windows": {
-                "command": "Get-ChildItem",
+                "command": "rm",
                 "args": [
+                    "-R",
                     "-Path",
-                    "build\\,",
-                    "dist\\,",
-                    "htmlcov\\,",
-                    "docs\\_build,",
-                    "${config:modulename}.egg-info",
-                    "-Recurse",
-                    "|",
-                    "Remove-Item",
-                    "-Recurse",
-                    "-Confirm:$false",
-                    "-Force",
-                ],
+                    "'src/${config:modulename}.egg-info','build','dist','htmlcov','docs/_build'",
+                    "-ErrorAction",
+                    "SilentlyContinue"
+                ]
             },
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -82,7 +77,7 @@
             "args": [
                 "-m",
                 "pylint",
-                "src",
+                "src"
             ],
             "problemMatcher": []
         },
@@ -109,9 +104,13 @@
                 "build",
                 ".",
                 "--wheel",
-                "--sdist",
+                "--sdist"
             ],
-            "problemMatcher": []
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         },
         {
             "label": "Test",
@@ -119,7 +118,25 @@
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
-                "pytest",
+                "coverage",
+                "run",
+                "-m",
+                "unittest"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "Coverage Report",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "coverage",
+                "html"
             ],
             "problemMatcher": []
         },
@@ -159,7 +176,7 @@
         },
         {
             "label": "Install Locally",
-            "type": "shell",
+            "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
@@ -169,15 +186,28 @@
                 "--force-reinstall",
                 "*.whl"
             ],
+            "windows": {
+                "command": "${config:python.defaultInterpreterPath}",
+                "args": [
+                    "-m",
+                    "pip",
+                    "install",
+                    "--user",
+                    "--force-reinstall",
+                    "--find-links=${workspaceFolder}/dist",
+                    "${workspaceFolderBasename}"
+                ]
+            },
             "dependsOrder": "sequence",
             "dependsOn": [
                 "Clean",
-                "Install Dependencies",
+                //"Install Dependencies",
                 "Security",
                 "Sort Imports",
                 "Format",
                 "Pylint",
                 "Test",
+                "Coverage Report",
                 "Build",
                 "Sphinx HTML"
             ],
@@ -185,6 +215,6 @@
                 "cwd": "dist"
             },
             "problemMatcher": []
-        },
+        }
     ]
 }
