--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,10 @@ jobs:
         run: pylint -E src
       - name: Scan security vulnerabilities with bandit
         run: bandit -c pyproject.toml -r -lll .
+      - name: Generate tests
+        run: coverage run -m unittest
       - name: Generate coverage report
-        run: pytest
+        run: coverage html
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v4
         with:
