update github actions

--- a/.github/workflows/checkpr.yml
+++ b/.github/workflows/checkpr.yml
@@ -24,5 +24,7 @@ jobs:
         run: pylint -E src
       - name: Scan security vulnerabilities with bandit
         run: bandit -c pyproject.toml -r .
+      - name: Run unit tests
+        run: coverage run -m unittest
       - name: Generate coverage report
-        run: pytest
+        run: coverage html
