--- a/.github/workflows/checkpr.yml
+++ b/.github/workflows/checkpr.yml
@@ -24,7 +24,5 @@ jobs:
         run: pylint -E src
       - name: Scan security vulnerabilities with bandit
         run: bandit -c pyproject.toml -r .
-      - name: Run unit tests
-        run: coverage run -m unittest
-      - name: Generate coverage report
-        run: coverage html
+      - name: Generate test coverage report
+        run: pytest
