--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,34 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format.
-    // Use the Deploy Dependencies tasks to install the necessary packages.
-    // Needs Powershell>=5.1 on Windows.
+    // for the documentation about the tasks.json format
+    //
+    // This VSCode development workflow is intended to work on
+    // MacOS, Linux and Windows (with Powershell>=5.1).
+    //
+    // Use the Install Deploy Dependencies to System task to install
+    // the necessary build and test packages into the system environment.
+    //
+    // Use the Create Venv task to create a virtual environment in the
+    // designated directory. Select this environment using Select
+    // Interpreter to auto-activate it via New Terminal.
+    //
     // Remember to include any global Python bin (Scripts on Windows) in PATH.
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Install Deploy Dependencies",
+            "label": "Create Venv",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "venv",
+                "${config:venv}",
+                "--system-site-packages"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Install Deploy Dependencies to System", // or User if System not writeable
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -29,7 +50,7 @@
                 "dist",
                 "htmlcov",
                 "docs/_build",
-                "src/${config:modulename}.egg-info"
+                "${config:modulename}.egg-info",
             ],
             "windows": {
                 "command": "rm",
@@ -38,7 +59,7 @@
                     "-Path",
                     "'src/${config:modulename}.egg-info','build','dist','htmlcov','docs/_build'",
                     "-ErrorAction",
-                    "SilentlyContinue"
+                    "SilentlyContinue" // doesn't work! - stops on exit code 1 anyway
                 ]
             },
             "options": {
@@ -104,7 +125,7 @@
                 "build",
                 ".",
                 "--wheel",
-                "--sdist"
+                "--sdist",
             ],
             "problemMatcher": [],
             "group": {
@@ -118,27 +139,13 @@
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
-                "coverage",
-                "run",
-                "-m",
-                "unittest"
+                "pytest"
             ],
             "problemMatcher": [],
             "group": {
                 "kind": "test",
                 "isDefault": true
             }
-        },
-        {
-            "label": "Coverage Report",
-            "type": "process",
-            "command": "${config:python.defaultInterpreterPath}",
-            "args": [
-                "-m",
-                "coverage",
-                "html"
-            ],
-            "problemMatcher": []
         },
         {
             "label": "Sphinx",
@@ -175,14 +182,30 @@
             "problemMatcher": []
         },
         {
-            "label": "Install Locally",
+            "label": "Sphinx Deploy to S3", // needs AWS credentials
+            "type": "process",
+            "command": "aws",
+            "args": [
+                "s3",
+                "cp",
+                "${workspaceFolder}/docs/_build/html",
+                "s3://www.semuconsulting.com/${config:modulename}/",
+                "--recursive"
+            ],
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "Sphinx HTML"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Install to System", // or User if System not writeable
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
                 "pip",
                 "install",
-                "--user",
                 "--force-reinstall",
                 "*.whl"
             ],
@@ -192,7 +215,6 @@
                     "-m",
                     "pip",
                     "install",
-                    "--user",
                     "--force-reinstall",
                     "--find-links=${workspaceFolder}/dist",
                     "${workspaceFolderBasename}"
@@ -200,14 +222,12 @@
             },
             "dependsOrder": "sequence",
             "dependsOn": [
-                "Clean",
-                //"Install Dependencies",
+                //"Clean",
                 "Security",
                 "Sort Imports",
                 "Format",
                 "Pylint",
                 "Test",
-                "Coverage Report",
                 "Build",
                 "Sphinx HTML"
             ],
@@ -215,6 +235,39 @@
                 "cwd": "dist"
             },
             "problemMatcher": []
-        }
+        },
+        {
+            "label": "Install to Venv",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pip",
+                "install",
+                "--upgrade",
+                "--force-reinstall",
+                "*.whl",
+                "--target",
+                "${env:UserProfile}/semuvenv/Lib/site-packages"
+            ],
+            "windows": {
+                "command": "${config:python.defaultInterpreterPath}",
+                "args": [
+                    "-m",
+                    "pip",
+                    "install",
+                    "--upgrade",
+                    "--force-reinstall",
+                    "--find-links=${workspaceFolder}/dist",
+                    "${workspaceFolderBasename}",
+                    "--target",
+                    "${config:venv}/Lib/site-packages"
+                ]
+            },
+            "options": {
+                "cwd": "dist"
+            },
+            "problemMatcher": []
+        },
     ]
 }
