--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,8 @@ jobs:
           python3 -m
           pip install
           build
-          --user
       - name: Build a binary wheel and a source tarball
-        run: python3 -m build
+        run: python3 -m build . --wheel --sdist
       - name: Store the distribution packages
         uses: actions/upload-artifact@v4
         with:
