--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,12 @@ permissions:
 jobs:
   release-build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9, "3.10", "3.11", "3.12", "3.13", "3.14.0-rc.2"]
-
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.13
 
       - name: Build release distributions
         run: |
