--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
           path: dist/
 
   testpypi-publish:
+    needs:
+      - release-build
     name: upload release to Test PyPI
     runs-on: ubuntu-latest
     # Specifying a GitHub environment is optional, but strongly encouraged
@@ -36,7 +38,11 @@ jobs:
       # IMPORTANT: this permission is mandatory for Trusted Publishing
       id-token: write
     steps:
-      # retrieve your distributions here
+    - name: Download all the dists # Download the build artifacts that were saved earlier
+      uses: actions/download-artifact@v4
+      with:
+        name: release-dists
+        path: dist/
     - name: Publish package distributions to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
